@@ -1,0 +1,4 @@
+(defsystem package-inferred-system-test-2
+  :class :package-inferred-system
+  :depends-on ("package-inferred-system-test-2/utilities")
+  :default-component-class :cl-source-file.cl)
