@@ -1,0 +1,2 @@
+(defpackage package-inferred-system-test-2/utilities
+  (:use :cl))
